--- a/templates/pro.html
+++ b/templates/pro.html
@@ -27,7 +27,7 @@
 
 {% endwith %}
     <div class="main">
-       <center> <h1>PRODUCT RECORD<hr></h1></center>
+       <center> <h1>PRODUCT DETAILS<hr></h1></center>
 
   
         <div align="center"class="table">
